RESOLVED FIXED121888
Crash in Document::setFocusedElement
https://bugs.webkit.org/show_bug.cgi?id=121888
Summary Crash in Document::setFocusedElement
Ryosuke Niwa
Reported 2013-09-24 18:46:41 PDT
Crash in Document::setFocusedElement
Attachments
Fixes the bug (3.38 KB, patch)
2013-09-24 18:50 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2013-09-24 18:50:51 PDT
Created attachment 212530 [details] Fixes the bug
Andreas Kling
Comment 2 2013-09-24 20:06:03 PDT
Comment on attachment 212530 [details] Fixes the bug Urgh. I wish we had a better pattern for avoiding bugs like this.
WebKit Commit Bot
Comment 3 2013-09-24 20:33:46 PDT
Comment on attachment 212530 [details] Fixes the bug Clearing flags on attachment: 212530 Committed r156382: <http://trac.webkit.org/changeset/156382>
WebKit Commit Bot
Comment 4 2013-09-24 20:33:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.