Crash in Document::setFocusedElement https://bugs.webkit.org/show_bug.cgi?id=121888

Reviewed by Andreas Kling.

Source/WebCore:

Merge https://chromium.googlesource.com/chromium/blink/+/4a594a3de7d9761462b55fb27a6850d767419af2

The crash was caused by attempting to call Chrome:focusedNodeChanged() after m_page had already
been cleared. This could happen when blur's event handler removes the iframe from which
the focus had been moved. Fixed the bug by adding a null pointer check.

Test: fast/events/blur-remove-parent-crash.html

* dom/Document.cpp:
(WebCore::Document::setFocusedElement):

LayoutTests:

* fast/events/blur-remove-parent-crash-expected.txt: Added.
* fast/events/blur-remove-parent-crash.html: Added.


Canonical link: https://commits.webkit.org/139887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156382 268f45cc-cd09-0410-ab3c-d52691b4dbfc